[package]
name = "basic-toml"
version = "0.0.0"
authors = ["Alex Crichton <alex@alexcrichton.com>", "David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["encoding"]
repository = "https://github.com/dtolnay/basic-toml"
documentation = "https://docs.rs/toml"
description = """
A native Rust encoder and decoder of TOML-formatted files and streams. Provides
implementations of the standard Serialize/Deserialize traits for TOML data to
facilitate deserializing and serializing Rust structures.
"""
categories = ["config", "encoding", "parser-implementations"]
edition = "2021"

[dependencies]
serde = "1.0.97"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
