[package]
name = "basic-toml"
version = "0.0.0"
authors = ["Alex Crichton <alex@alexcrichton.com>", "David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["toml", "serde"]
repository = "https://github.com/dtolnay/basic-toml"
documentation = "https://docs.rs/basic-toml"
description = "Minimal TOML library with few dependencies"
categories = ["config", "encoding", "parser-implementations"]
edition = "2021"

[dependencies]
serde = "1.0.97"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
